--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -106,7 +106,6 @@ small {
   height:fit-content;
 }
 .menu a {
-  padding: 1rem;
   display: block;
 }
 .menu a[aria-current] {
